--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "apexcharts": "^3.49.2",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3"
   }
 }
