--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3"
   }
