--- a/nomflix/package.json
+++ b/nomflix/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-query": "^1.2.9"
   }
 }
